// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Scanners service endpoint returns an array of multiple scanners renders the page with a table showing the details of the scanners 1`] = `
<div
  class="m-3"
>
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="scanner-id"
        >
          Id
        </th>
         
        <th
          class="scanner-description"
        >
          Description
        </th>
         
        <th
          class="scanner-notes"
        >
          Notes
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td
          class="scanner-id"
        >
          
          test-scanner-id-1
        
        </td>
         
        <td
          class="scanner-description"
        >
          <div>
            

            <p>
              Test Scanner Description 1
            </p>
          </div>
        </td>
         
        <td
          class="scanner-notes"
        >
          <div>
            

            <p>
              Test Scanner Notes 1
            </p>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="scanner-id"
        >
          
          test-scanner-id-2
        
        </td>
         
        <td
          class="scanner-description"
        >
          <div>
            

            <p>
              Test Scanner Description 2
            </p>
          </div>
        </td>
         
        <td
          class="scanner-notes"
        >
          <div />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Index when Get Scanners service endpoint returns an empty array renders the page with an empty table 1`] = `
<div
  class="m-3"
>
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="scanner-id"
        >
          Id
        </th>
         
        <th
          class="scanner-description"
        >
          Description
        </th>
         
        <th
          class="scanner-notes"
        >
          Notes
        </th>
      </tr>
    </thead>
     
    <tbody />
  </table>
</div>
`;
